Database connection, table gen, refactoring
